--- a/CEESP_software/Dados.xaml
+++ b/CEESP_software/Dados.xaml
@@ -48,7 +48,7 @@
                 <ImageBrush ImageSource="/edit.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="btSave" Content="" HorizontalAlignment="Left" Margin="448,402,0,0" VerticalAlignment="Top" BorderBrush="{x:Null}" Foreground="{x:Null}" Width="30" Height="30" Cursor="Hand">
+        <Button x:Name="btSave" Content="" HorizontalAlignment="Left" Margin="448,402,0,0" VerticalAlignment="Top" BorderBrush="{x:Null}" Foreground="{x:Null}" Width="30" Height="30" Cursor="Hand" Click="btSave_Click">
             <Button.OpacityMask>
                 <ImageBrush ImageSource="/save.png"/>
             </Button.OpacityMask>
