--- a/CEESP_software/Grafico.xaml
+++ b/CEESP_software/Grafico.xaml
@@ -102,18 +102,18 @@
         <Canvas x:Name="Graph" Margin="-4,-1,0,1">
             <Button x:Name="refresh" Content="" Canvas.Left="730" Canvas.Top="11" BorderBrush="#00707070" Foreground="#00000000" Width="30" Height="30" RenderTransformOrigin="0.083,0.467" HorizontalAlignment="Left" VerticalAlignment="Top" Cursor="Hand" Click="refresh_Click">
                 <Button.OpacityMask>
-                    <ImageBrush ImageSource="/Vector.png"/>
+                    <ImageBrush ImageSource="/icons/Vector.png"/>
                 </Button.OpacityMask>
                 <Button.Background>
-                    <ImageBrush ImageSource="/Vector.png"/>
+                    <ImageBrush ImageSource="/icons/Vector.png"/>
                 </Button.Background>
             </Button>
-            <ComboBox x:Name="CBTimes" Canvas.Left="685" Canvas.Top="10" Width="32" Height="32" BorderBrush="#004A3D3D" HorizontalAlignment="Left" VerticalAlignment="Top" SelectionChanged="CBTimes_SelectionChanged" Cursor="Hand">
+            <ComboBox x:Name="CBTimes" Canvas.Left="685" Canvas.Top="10" Width="32" Height="32" BorderBrush="#004A3D3D" HorizontalAlignment="Left" VerticalAlignment="Top" SelectionChanged="CBTimes_SelectionChanged" Cursor="Hand" Foreground="#00000000">
                 <ComboBox.Background>
-                    <ImageBrush ImageSource="/ri_time-line.png"/>
+                    <ImageBrush ImageSource="/icons/ri_time-line.png"/>
                 </ComboBox.Background>
                 <ComboBox.OpacityMask>
-                    <ImageBrush ImageSource="/ri_time-line.png"/>
+                    <ImageBrush ImageSource="/icons/ri_time-line.png"/>
                 </ComboBox.OpacityMask>
             </ComboBox>
             <Label x:Name="TimeSelectet" Content="2s" Canvas.Left="708" Canvas.Top="26" Background="#00FBFAFA" Foreground="#FFF7E0E0" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Width="22"/>
@@ -127,10 +127,10 @@
             </Button>
             <Button x:Name="btLegenda" Content="Button" Canvas.Left="745" Canvas.Top="410" Width="35" Height="30" BorderBrush="#00707070" Foreground="#00000000" Click="btLegenda_Click" Cursor="Hand" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Button.OpacityMask>
-                    <ImageBrush ImageSource="/Legenda.png"/>
+                    <ImageBrush ImageSource="/icons/Legenda.png"/>
                 </Button.OpacityMask>
                 <Button.Background>
-                    <ImageBrush ImageSource="/Legenda.png"/>
+                    <ImageBrush ImageSource="/icons/Legenda.png"/>
                 </Button.Background>
             </Button>
             <Grid x:Name="Info" Height="140" Canvas.Left="26" Canvas.Top="85" Width="139" HorizontalAlignment="Left" VerticalAlignment="Center" Background="#3F000000" Visibility="Hidden">
@@ -158,7 +158,7 @@
                 <TextBlock x:Name="l9" TextWrapping="Wrap" Text="φ" Foreground="#FFB2B6B2" FontFamily="Open Sans" FontSize="20" Height="27" Width="24" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="316,0,0,0"/>
             </Grid>
             <Rectangle Height="30" Canvas.Left="573" Canvas.Top="410" Width="100" Fill="#0CD9D9D9"/>
-            <Button x:Name="ViewZoomMais" Content="Button" Canvas.Left="583" Canvas.Top="415" Cursor="" Foreground="{x:Null}" BorderBrush="{x:Null}" Height="20" Width="20" Click="ViewZoomMais_Click">
+            <Button x:Name="ViewZoomMais" Content="Button" Canvas.Left="583" Canvas.Top="415" Cursor="Hand" Foreground="{x:Null}" BorderBrush="{x:Null}" Height="20" Width="20" Click="ViewZoomMais_Click">
                 <Button.OpacityMask>
                     <ImageBrush ImageSource="/icons/mais.png"/>
                 </Button.OpacityMask>
@@ -166,12 +166,12 @@
                     <ImageBrush ImageSource="/icons/mais.png" Stretch="Fill"/>
                 </Button.Background>
             </Button>
-            <Button x:Name="ViewZoomMenos" Content="Button" Canvas.Left="613" Canvas.Top="415" BorderBrush="{x:Null}" Foreground="{x:Null}" Width="20" Height="20" HorizontalAlignment="Left" VerticalAlignment="Center" Cursor="" Click="ViewZoomMenos_Click">
+            <Button x:Name="ViewZoomMenos" Content="Button" Canvas.Left="613" Canvas.Top="415" BorderBrush="{x:Null}" Foreground="{x:Null}" Width="20" Height="20" HorizontalAlignment="Left" VerticalAlignment="Center" Cursor="Hand" Click="ViewZoomMenos_Click">
                 <Button.OpacityMask>
-                    <ImageBrush ImageSource="/icons/mais.png"/>
+                    <ImageBrush ImageSource="/icons/menos.png"/>
                 </Button.OpacityMask>
                 <Button.Background>
-                    <ImageBrush ImageSource="/icons/mais.png"/>
+                    <ImageBrush ImageSource="/icons/menos.png"/>
                 </Button.Background>
             </Button>
             <Label x:Name="LabelZoom" Content="1x" Canvas.Left="641" Canvas.Top="412" FontFamily="Algerian" Background="{x:Null}" Foreground="#FFAFAFAF"/>
