--- a/CEESP_software/Dados.xaml
+++ b/CEESP_software/Dados.xaml
@@ -12,14 +12,15 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <ListView x:Name="ListData" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="58,86,262,64" Width="480" Height="300" Background="#2B000000" BorderBrush="#3F828790" Foreground="#FFEDEFF3" OpacityMask="Black" SelectionChanged="ListData_SelectionChanged">
+        <ListView x:Name="ListData" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="58,86,262,64" Width="480" Height="300" Background="#2B000000" BorderBrush="#3F828790" Foreground="#FFEDEFF3" OpacityMask="Black" SelectionChanged="ListData_SelectionChanged" VerticalAlignment="Center" HorizontalAlignment="Center" FontStyle="Italic">
             <ListView.View>
                 <GridView>
+                    <GridViewColumn Header="Tempo" Width="50"  DisplayMemberBinding="{Binding Tempo}"/>
                     <GridViewColumn Header="Va" Width="50"  DisplayMemberBinding="{Binding Va}"/>
                     <GridViewColumn Header="Ia" Width="50" DisplayMemberBinding="{Binding Ia}"/>
                     <GridViewColumn Header="FP" Width="50" DisplayMemberBinding="{Binding FP}"/>
                     <GridViewColumn Header="RPM" Width="50" DisplayMemberBinding="{Binding RPM}"/>
-                    <GridViewColumn Header="F" Width="50" DisplayMemberBinding="{Binding frequency}"/>
+                    <GridViewColumn Header="F" Width="50" DisplayMemberBinding="{Binding F}"/>
                 </GridView>
             </ListView.View>
         </ListView>
