Ajustes na conversão de valores flutuantes na interface de dados.

--- a/CEESP_software/Dados.xaml
+++ b/CEESP_software/Dados.xaml
@@ -12,7 +12,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <ListView x:Name="ListData" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="58,86,262,64" Width="480" Height="300" Background="#2B000000" BorderBrush="#3F828790" Foreground="#FFEDEFF3" OpacityMask="Black" SelectionChanged="ListData_SelectionChanged" VerticalAlignment="Center" HorizontalAlignment="Center" FontStyle="Italic">
+        <ListView x:Name="ListData" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="58,86,262,64" Width="480" Height="300" Background="#2B000000" Foreground="#FFEDEFF3" OpacityMask="Black" SelectionChanged="ListData_SelectionChanged" VerticalAlignment="Center" HorizontalAlignment="Center" FontStyle="Italic" BorderBrush="#339597A0" VerticalContentAlignment="Center" Padding="1,1,1,1" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Tempo" Width="50"  DisplayMemberBinding="{Binding Tempo}"/>
