--- a/CEESP_software/Grafico.xaml
+++ b/CEESP_software/Grafico.xaml
@@ -175,6 +175,14 @@
                 </Button.Background>
             </Button>
             <Label x:Name="LabelZoom" Content="1x" Canvas.Left="641" Canvas.Top="412" FontFamily="Algerian" Background="{x:Null}" Foreground="#FFAFAFAF"/>
+            <Button x:Name="btGraph" Content="Button" Canvas.Left="57" Canvas.Top="410" Width="30" Height="30" BorderBrush="{x:Null}" Foreground="{x:Null}" HorizontalAlignment="Center" VerticalAlignment="Center" Click="btGraph_Click" Visibility="Collapsed">
+                <Button.OpacityMask>
+                    <ImageBrush ImageSource="/icons/graph.png"/>
+                </Button.OpacityMask>
+                <Button.Background>
+                    <ImageBrush ImageSource="/icons/graph.png"/>
+                </Button.Background>
+            </Button>
         </Canvas>
     </Grid>
 </Page>
