--- a/CEESP_software/CEESP.xaml
+++ b/CEESP_software/CEESP.xaml
@@ -382,7 +382,7 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
-        <Button x:Name="btIncio" HorizontalAlignment="Left" Margin="31,160,0,0" VerticalAlignment="Top" Background="#00000000" BorderBrush="#00000000" Height="30" Width="100" Foreground="#00000000" OpacityMask="#00000000" Cursor="Hand" RenderTransformOrigin="0.5,0.5" Click="btIncio_Click">
+        <Button x:Name="btIncio" HorizontalAlignment="Left" Margin="31,160,0,0" VerticalAlignment="Top" Background="#00000000" BorderBrush="#00000000" Height="30" Width="100" Foreground="#00000000" OpacityMask="#00000000" Cursor="Hand" RenderTransformOrigin="0.5,0.5" Click="btIncio_Click" MouseEnter="tbInicio_MouseEnter" MouseLeave="btInicio_MouseLeave">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -392,7 +392,7 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
-        <Button x:Name="btGrafico" HorizontalAlignment="Left" Margin="31,198,0,0" VerticalAlignment="Top" Background="#00000000" BorderBrush="#00000000" Height="30" Width="100" Foreground="#00000000" OpacityMask="#00000000" Cursor="Hand" RenderTransformOrigin="0.5,0.5" Click="btGrafico_Click">
+        <Button x:Name="btGrafico" HorizontalAlignment="Left" Margin="31,198,0,0" VerticalAlignment="Top" Background="#00000000" BorderBrush="#00000000" Height="30" Width="100" Foreground="#00000000" OpacityMask="#00000000" Cursor="Hand" RenderTransformOrigin="0.5,0.5" Click="btGrafico_Click" MouseEnter="btGrafico_MouseEnter" MouseLeave="btGrafico_MouseLeave">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -402,7 +402,7 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
-        <Button x:Name="btDados" HorizontalAlignment="Left" Margin="30,236,0,0" VerticalAlignment="Top" Background="#00000000" BorderBrush="#00000000" Height="30" Width="100" Foreground="#00000000" OpacityMask="#00000000" Cursor="Hand" RenderTransformOrigin="0.5,0.5" Click="btDados_Click">
+        <Button x:Name="btDados" HorizontalAlignment="Left" Margin="30,236,0,0" VerticalAlignment="Top" Background="#00000000" BorderBrush="#00000000" Height="30" Width="100" Foreground="#00000000" OpacityMask="#00000000" Cursor="Hand" RenderTransformOrigin="0.5,0.5" Click="btDados_Click" MouseEnter="btDados_MouseEnter" MouseLeave="btDados_MouseLeave">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -412,7 +412,7 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
-        <Button x:Name="btRelat" HorizontalAlignment="Left" Margin="30,273,0,0" VerticalAlignment="Top" Background="#00000000" BorderBrush="#00000000" Height="30" Width="100" Foreground="#00000000" OpacityMask="#00000000" Cursor="Hand" RenderTransformOrigin="0.5,0.5">
+        <Button x:Name="btRelat" HorizontalAlignment="Left" Margin="30,273,0,0" VerticalAlignment="Top" Background="#00000000" BorderBrush="#00000000" Height="30" Width="100" Foreground="#00000000" OpacityMask="#00000000" Cursor="Hand" RenderTransformOrigin="0.5,0.5" MouseEnter="btRelatorio_MouseEnter" MouseLeave="btRelatorio_MouseLeave">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
